Fix overflow issue.

--- a/resources/scss/header.scss
+++ b/resources/scss/header.scss
@@ -6,6 +6,8 @@ header {
   align-items: center;
   gap: 1rem;
 
+  height: 2.5rem;
+
   .logo {
     text-decoration: none;
     display: flex;
