--- a/resources/scss/pages/email-listing.scss
+++ b/resources/scss/pages/email-listing.scss
@@ -1,5 +1,5 @@
 main {
-  margin: 1rem;
+  margin: 1rem 1rem 0 1rem;
   display: flex;
   gap: 1rem;
 
@@ -7,11 +7,14 @@ main {
     border-right: 1px solid var(--background-color-one);
     padding-right: 1rem;
   }
-
+  
   >div {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     width: 50%;
+    max-height: calc(100dvh - 5.5rem);
+
+    overflow: auto;
   }
 }
